Fixes alphabet spacing on mobile

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -63,9 +63,18 @@
       text-transform: uppercase;
     }
 
+    .slogan {
+      font-style: italic;
+      color: white;
+      font-size: 120%;
+    }
+
     @media (max-width: 400px) {
       .banner-title {
         font-size: 175%;
+      }
+      .slogan {
+        font-size: 80%;
       }
     }
 
@@ -75,11 +84,6 @@
       }
     }
 
-    .slogan {
-      font-style: italic;
-      color: white;
-      font-size: 120%;
-    }
 
 /*    header {
       font-family: "Playfair Display", serif;
@@ -99,11 +103,11 @@
       min-height: 20%;
     }
 
-    div ul li.alphabet a {
-      display: inline-block;
-      /*display: block;*/
-      /*float: none;*/
+
+    a.link-color {
+      color: #5DC98F!important;
     }
+
 
     ul.alphabet {
       list-style-type: none;
@@ -111,8 +115,12 @@
       overflow: hidden;
       font-weight: bold;
       text-align: center;
-      margin-left: -41px;
+      margin-left: -40px;
+    }
 
+    li.alphabet {
+      display: inline-block;
+      float: none;
     }
 
     li.alphabet a {
@@ -123,10 +131,17 @@
       /*display: block;*/
     }
 
-    li.alphabet {
-      display: inline-block;
-      float: none;
+    @media (max-width: 1153px) {
+      li.alphabet {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 5px;
+      }
+      ul.alphabet {
+        margin-left: -35px;
+      }
     }
+
 
     .font {
       font-size: 120%;
@@ -145,7 +160,15 @@
       padding-top: 35px;
     }
 
+/*    .table-spacing {
+      border-bottom: 15px solid #fff;
+    }
 
+    .table-striped {
+      background-color: #D3D3D3!important;
+      border-top, border-bottom: 15px solid #fff;
+    }
+*/
     footer {
       position: absolute;
       bottom: 0;
